// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`literal > array of literals builds anyOf and handles undefined 1`] = `
{
  "$ref": "#/definitions/LiteralSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "LiteralSchema": {
      "anyOf": [
        {
          "const": "a",
          "type": "string",
        },
        {
          "const": 2,
          "type": "integer",
        },
        {
          "const": 2.5,
          "type": "number",
        },
        {
          "const": true,
          "type": "boolean",
        },
        {
          "const": null,
          "type": "null",
        },
        {
          "const": "10",
          "type": "string",
        },
      ],
    },
  },
}
`;

exports[`literal > array of literals builds anyOf and handles undefined 2`] = `
{
  "$ref": "#/definitions/LiteralSchema",
  "$schema": "http://json-schema.org/draft-04/schema#",
  "definitions": {
    "LiteralSchema": {
      "anyOf": [
        {
          "enum": [
            "a",
          ],
          "type": "string",
        },
        {
          "enum": [
            2,
          ],
          "type": "integer",
        },
        {
          "enum": [
            2.5,
          ],
          "type": "number",
        },
        {
          "enum": [
            true,
          ],
          "type": "boolean",
        },
        {
          "enum": [
            null,
          ],
          "type": "null",
        },
        {
          "enum": [
            "10",
          ],
          "type": "string",
        },
      ],
    },
  },
}
`;

exports[`literal > array of literals builds anyOf and handles undefined 3`] = `
{
  "$ref": "#/components/schemas/LiteralSchema",
  "components": {
    "schemas": {
      "LiteralSchema": {
        "anyOf": [
          {
            "enum": [
              "a",
            ],
            "type": "string",
          },
          {
            "enum": [
              2,
            ],
            "type": "integer",
          },
          {
            "enum": [
              2.5,
            ],
            "type": "number",
          },
          {
            "enum": [
              true,
            ],
            "type": "boolean",
          },
          {
            "enum": [
              null,
            ],
          },
          {
            "enum": [
              "10",
            ],
            "type": "string",
          },
        ],
      },
    },
  },
  "openapi": "https://spec.openapis.org/oas/3.0.3",
}
`;

exports[`literal > handles only-undefined literal 1`] = `
{
  "$ref": "#/definitions/LiteralSchemaOnlyUndefined",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "LiteralSchemaOnlyUndefined": {},
  },
}
`;

exports[`literal > ignores unsupported literal values 1`] = `
{
  "$ref": "#/definitions/LiteralSchemaUnsupported",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "LiteralSchemaUnsupported": {},
  },
}
`;

exports[`literal > single literal uses const 1`] = `
{
  "$ref": "#/definitions/LiteralSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "LiteralSchema": {
      "const": "value",
      "type": "string",
    },
  },
}
`;

exports[`literal > single literal uses const 2`] = `
{
  "$ref": "#/definitions/LiteralSchema",
  "$schema": "http://json-schema.org/draft-04/schema#",
  "definitions": {
    "LiteralSchema": {
      "enum": [
        "value",
      ],
      "type": "string",
    },
  },
}
`;
